kubernetes-networks/dashboard/web-svc-headless-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
    name: web-svc-dashboard
    namespace: kubernetes-dashboard
spec:
    selector:
        k8s-app: kubernetes-dashboard
    type: ClusterIP
    clusterIP: None
    ports:
        - protocol: TCP
          port: 80
