kubernetes-networks/dashboard/web-ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /dashboard
        backend:
          serviceName: web-svc-dashboard
          servicePort:  80
